--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
 <meta name="apple-mobile-web-app-title" content="ADDR_LIST">
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="theme-color" content="#000000">
-<link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect fill='%23000' width='100' height='100'/><text x='50' y='60' font-size='40' text-anchor='middle' fill='%23fff'>₿</text></svg>">
+<link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect fill='%23000' width='100' height='100' rx='20'/><text x='50' y='65' font-size='50' font-weight='bold' text-anchor='middle' fill='%23fff'>₿</text></svg>">
+<link rel="apple-touch-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect fill='%23000' width='100' height='100'/><text x='50' y='65' font-size='50' font-weight='bold' text-anchor='middle' fill='%23fff'>₿</text></svg>">
 
 <style>
   * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+  }
+  html, body {
+    overflow-x: hidden;
   }
   body {
     background: #000;
@@ -45,11 +49,13 @@
     vertical-align: middle;
   }
   .label {
-    width: 110px;
+    width: 90px;
+    min-width: 90px;
     color: #666;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 18px;
     text-transform: uppercase;
+    text-align: center;
   }
   .addr-box {
     position: relative;
@@ -111,7 +117,7 @@
     opacity: 0.7;
   }
   .status {
-    font-size: 22px;
+    font-size: 32px;
     color: #0f0;
     font-weight: bold;
     opacity: 0;
@@ -156,6 +162,9 @@
   .addr-box:hover .tooltip {
     opacity: 1;
   }
+  .addr-box.copied .tooltip {
+    opacity: 0 !important;
+  }
   .explorer-dropdown {
     position: absolute;
     bottom: calc(100% + 5px);
@@ -194,7 +203,7 @@
     padding-left: 25px;
     position: relative;
     color: #555;
-    font-size: 12px;
+    font-size: 14px;
   }
   .child-row .label::before {
     content: '└';
@@ -229,11 +238,12 @@
   }
   @media (max-width: 600px) {
     body {
-      padding: 15px;
+      padding: 12px;
     }
     .label {
-      width: 70px;
-      font-size: 11px;
+      width: 65px;
+      min-width: 65px;
+      font-size: 14px;
     }
     .addr-text {
       font-size: 11px;
@@ -508,7 +518,7 @@
       addrBox.classList.add('copied');
       setTimeout(() => {
         addrBox.classList.remove('copied');
-      }, 1500);
+      }, 1000);
     } catch (err) {
       console.error('Ошибка копирования:', err);
     }
