--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
     font-family: "Courier New", monospace;
     font-size: 15.4px;
     padding: 22px;
-    padding-top: max(22px, env(safe-area-inset-top));
+    padding-top: max(calc(25vh + 22px), env(safe-area-inset-top));
     padding-bottom: max(22px, env(safe-area-inset-bottom));
     padding-left: max(22px, env(safe-area-inset-left));
     padding-right: max(22px, env(safe-area-inset-right));
     min-height: 100vh;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
   }
   table {
