--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
   @media (max-width: 600px) {
     body {
       padding: 12px;
+      padding-top: max(calc(33vh + 12px), env(safe-area-inset-top));
     }
     .label {
       width: 65px;
