--- a/index.html
+++ b/index.html
@@ -196,22 +196,72 @@
     font-size: 12px;
     color: #999;
   }
-  .quote-container {
+  .vault-container {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
-    padding: 22px;
+    height: 16vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 15px;
     padding-top: max(22px, env(safe-area-inset-top));
-    text-align: center;
+  }
+  .vault-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+  }
+  .vault-balance {
+    display: flex;
+    align-items: baseline;
+    gap: 4px;
+    font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', 'Segoe UI', sans-serif;
+  }
+  .currency {
+    color: #fff;
+    font-size: 20px;
+    font-weight: 300;
+    opacity: 0.5;
+  }
+  .amount {
+    color: #fff;
+    font-size: 28px;
+    font-weight: 600;
+    letter-spacing: 1px;
+  }
+  .amount.blur {
+    filter: blur(8px);
+    user-select: none;
+    opacity: 0.7;
+  }
+  .vault-lock {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    opacity: 0.4;
+  }
+  .lock-icon {
+    width: 14px;
+    height: 14px;
+    color: #fff;
+  }
+  .lock-text {
+    color: #fff;
+    font-size: 10px;
+    font-weight: 500;
+    letter-spacing: 2px;
+    font-family: -apple-system, BlinkMacSystemFont, 'SF Pro Display', 'Segoe UI', sans-serif;
   }
   .quote {
     color: #fff;
-    font-size: 13px;
-    font-style: italic;
+    font-size: 15px;
     opacity: 0.6;
     letter-spacing: 0.5px;
     margin: 0;
+    text-align: center;
   }
   @media (max-width: 768px) {
     .addr-full {
@@ -242,32 +292,26 @@
 </head>
 <body>
 
-<div class="quote-container">
-  <p class="quote" id="randomQuote"></p>
+<div class="vault-container">
+  <div class="vault-box">
+    <div class="vault-balance">
+      <span class="currency">$</span>
+      <span class="amount blur">XX.XXX.XXX</span>
+    </div>
+    <div class="vault-lock">
+      <svg class="lock-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+        <rect x="3" y="11" width="18" height="11" rx="2" ry="2"/>
+        <path d="M7 11V7a5 5 0 0 1 10 0v4"/>
+      </svg>
+      <span class="lock-text">LOCKED FOR 10 YEARS</span>
+    </div>
+  </div>
 </div>
 
 <table>
 </table>
 
 <script>
-  // Цитаты
-  const quotes = [
-    "Emotions are expensive—discipline is cheaper.",
-    "If you feel urgency, you've already lost clarity.",
-    "Revenge trading is just paying tuition in cash.",
-    "Don't make money decisions with an elevated heart rate.",
-    "Impulse is a fee you don't see on the statement.",
-    "Protect capital first; profits come second.",
-    "If you can't explain the move, don't make the move.",
-    "A good plan beats a strong feeling.",
-    "The market punishes speed more than mistakes.",
-    "Boredom and anger are not strategies.",
-    "Pause. Breathe. Then decide.",
-    "Your worst trades start with 'just this once.'"
-  ];
-  
-  document.getElementById('randomQuote').textContent = quotes[Math.floor(Math.random() * quotes.length)];
-
   // ========================================
   // НАСТРОЙКИ: ДОБАВЬ СЮДА СВОИ АДРЕСА
   // (Только сети, поддерживаемые Trezor)
