--- a/index.html
+++ b/index.html
@@ -330,6 +330,9 @@
         { label: 'ETH', explorer: 'https://etherscan.io/address/' },
         { label: 'POL', explorer: 'https://polygonscan.com/address/' },
         { label: 'BNB', explorer: 'https://bscscan.com/address/' },
+        { label: 'ARB', explorer: 'https://arbiscan.io/address/' },
+        { label: 'AVAX', explorer: 'https://snowtrace.io/address/' },
+        { label: 'OP', explorer: 'https://optimistic.etherscan.io/address/' },
         { label: 'ARB', explorer: 'https://arbiscan.io/address/' }
       ]
     },
@@ -340,7 +343,7 @@
     },
     {
       label: 'XRP',
-      address: '',
+      address: 'rfLrm7n46g9q28Ys9tK4EZReJ3KJAn1jFd',
       explorer: 'https://xrpscan.com/account/'
     },
     {
@@ -355,12 +358,12 @@
     },
     {
       label: 'BCH',
-      address: '',
+      address: 'bitcoincash:qqk5td3kffjf2kjdkync3fl9ga6mqlqgvyaqrt0ewq',
       explorer: 'https://blockchair.com/bitcoin-cash/address/'
     },
     {
       label: 'DOGE',
-      address: '',
+      address: 'DG64Mg9HRYjLxjUUiTzPHt5zW7UHUZDkbv',
       explorer: 'https://blockchair.com/dogecoin/address/'
     },
     {
@@ -369,44 +372,19 @@
       explorer: 'https://blockchair.com/dash/address/'
     },
     {
-      label: 'XMR',
-      address: '',
-      explorer: 'https://moneroblocks.info/search/'
-    },
-    {
       label: 'ETC',
-      address: '',
+      address: '0x5962dA09d85a8eaebc69B2730d1Dc1cE641Fcea8',
       explorer: 'https://blockscout.com/etc/mainnet/address/'
     },
     {
+      label: 'XLM',
+      address: 'GC2V5TBSGMH6XMYDMWJ7EVJE74J5Z5TNJNKMH6HSZYNDFTZZUVUUBMRF',
+      explorer: 'https://stellarscan.io/account/'
+    },
+    {
       label: 'ZEC',
-      address: '',
+      address: 't1RnfE2wcYgn8b4AHmXxJn7mwwsRijnqPXQ',
       explorer: 'https://blockchair.com/zcash/address/'
-    },
-    {
-      label: 'MATIC',
-      address: '',
-      explorer: 'https://polygonscan.com/address/'
-    },
-    {
-      label: 'AVAX',
-      address: '',
-      explorer: 'https://snowtrace.io/address/'
-    },
-    {
-      label: 'OP',
-      address: '',
-      explorer: 'https://optimistic.etherscan.io/address/'
-    },
-    {
-      label: 'EOS',
-      address: '',
-      explorer: 'https://bloks.io/account/'
-    },
-    {
-      label: 'XTZ',
-      address: '',
-      explorer: 'https://tzstats.com/'
     }
   ];
   // ========================================
