--- a/index.html
+++ b/index.html
@@ -332,8 +332,7 @@
         { label: 'BNB', explorer: 'https://bscscan.com/address/' },
         { label: 'ARB', explorer: 'https://arbiscan.io/address/' },
         { label: 'AVAX', explorer: 'https://snowtrace.io/address/' },
-        { label: 'OP', explorer: 'https://optimistic.etherscan.io/address/' },
-        { label: 'ARB', explorer: 'https://arbiscan.io/address/' }
+        { label: 'OP', explorer: 'https://optimistic.etherscan.io/address/' }
       ]
     },
     {
@@ -595,4 +594,5 @@
 
 </body>
 </html>
+
 
